fixing logo on mobile 3

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -69,6 +69,7 @@ p {
     border-radius: 80px;
     -webkit-border-radius: 80px;
     -moz-border-radius: 80px;
+    box-shadow: -5px -5px 15px 0 #7070705c, 5px 5px 15px 0 #0000008c;
 }
 
 @media screen and (max-width: 500px) {
